# StellKit

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/differ/: Cargo.toml
crates/differ/src/: lib.rs
crates/fork/: Cargo.toml
crates/fork/src/: lib.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: lib.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: lib.rs
docs/: wave3-issues.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Differ.tsx  Fork.tsx  Inspector.tsx  Profiler.tsx  ToolShell.tsx
