[workspace]
members = [
    "crates/inspector",
    "crates/profiler",
    "crates/differ",
    "crates/fork",
    "cli",
]
resolver = "2"

[workspace.dependencies]
stellar-xdr = "21.2.0"
soroban-sdk = "21.7.6"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
